melhorias e atualização sem alteração da lógica